--- a/index.css
+++ b/index.css
@@ -104,3 +104,31 @@ a:link {
     color: rgb(0, 0, 0);
   }
   
+  @media screen and (max-width:380px) {
+    .box
+    {
+      width:300px;
+      height:460px;
+    }
+    h3
+    {
+      top:-125px;
+      font-size:1.45em !important;
+    }
+    h6
+    {
+      top:-180px;
+      font-size:17px !important;
+    }
+   .anchor, a
+   {
+    width:80%;
+    height:30px;
+    top: -55px;
+    margin-top:15px;
+   }
+   .circle
+   {
+    top:-110px;
+   }
+  }
