--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow: scroll;
 }
 .box
 {
@@ -104,7 +104,7 @@ a:link {
     color: rgb(0, 0, 0);
   }
   
-  @media screen and (max-width:380px) {
+  @media screen and (max-width:500px) {
     .box
     {
       width:300px;
