--- a/index.css
+++ b/index.css
@@ -16,6 +16,201 @@ body
     align-items: center;
     overflow: scroll;
 }
+.fade-in {
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+}
+
+
+@keyframes fadeIn{
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+.animated{
+  -webkit-animation-duration:3s;
+  animation-duration:3s;
+  -webkit-animation-fill-mode:both;
+  animation-fill-mode:both;
+}
+
+@-webkit-keyframes fadeInRight{
+  0%{
+      opacity:0;
+      -webkit-transform:translateX(200px);
+      transform:translateX(200px)
+  }
+  88%{
+      opacity:1;
+      -webkit-transform:translateX(0);
+      transform:translateX(0)
+  }
+  95%{
+    opacity:1;
+    -webkit-transform:translateX(35);
+    transform:translateX(35)
+}
+100%{
+  opacity:1;
+  -webkit-transform:translateX(0);
+  transform:translateX(0)
+}
+}
+@keyframes fadeInRight{
+  0%{
+      opacity:0.2;
+      -webkit-transform:translateX(200px);
+      -ms-transform:translateX(200px);
+      transform:translateX(200px)
+  }
+
+  100%{
+      opacity:1;
+      -webkit-transform:translateX(0);
+      -ms-transform:translateX(0);
+      transform:translateX(0)
+  }
+}
+.fadeInRight{
+  -webkit-animation-name:fadeInRight;
+  animation-name:fadeInRight
+}
+
+
+
+
+.animated2{
+  -webkit-animation-duration:3s;
+  animation-duration:3s;
+  -webkit-animation-fill-mode:both;
+  animation-fill-mode:both;
+}
+
+@-webkit-keyframes fadeInLeft{
+  0%{
+      opacity:0;
+      -webkit-transform:translateX(-200px);
+      transform:translateX(-200px)
+  }
+  88%{
+      opacity:1;
+      -webkit-transform:translateX(0);
+      transform:translateX(0)
+  }
+  95%{
+    opacity:1;
+    -webkit-transform:translateX(-35);
+    transform:translateX(-35)
+}
+100%{
+  opacity:1;
+  -webkit-transform:translateX(0);
+  transform:translateX(0)
+}
+}
+@keyframes fadeInLeft{
+  0%{
+      opacity:0.2;
+      -webkit-transform:translateX(-200px);
+      -ms-transform:translateX(-200px);
+      transform:translateX(-200px)
+  }
+
+  100%{
+      opacity:1;
+      -webkit-transform:translateX(0);
+      -ms-transform:translateX(0);
+      transform:translateX(0)
+  }
+}
+.fadeInLeft{
+  -webkit-animation-name:fadeInLeft;
+  animation-name:fadeLeft;
+}
+
+@keyframes fadeInUp {
+  from {
+      transform: translate3d(0,40px,0)
+  }
+
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  from {
+      transform: translate3d(0,40px,0)
+  }
+
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1
+  }
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInUp {
+  opacity: 0
+}
+
+.fadeInUp {
+  opacity: 0;
+  animation-name: fadeInUp;
+  -webkit-animation-name: fadeInUp;
+}
+
+
 .box
 {
     
@@ -73,8 +268,8 @@ font-family: 'Quicksand', sans-serif;
   border-radius: 20px;
    position:relative;
    top:-70px;
-    width:90%;
-    height:40px;
+    width:85%;
+    height:65px;
     margin-top:20px;
     display: flex;
     justify-content: center;
@@ -95,8 +290,9 @@ a:link {
   
   /* mouse over link */
   a:hover {
-    background: rgba(255, 255, 255, 0.126);
-    color:rgb(0, 0, 0);
+   
+    transform: scale(1.1) !important;
+
   }
   
   /* selected link */
