--- a/index.css
+++ b/index.css
@@ -258,6 +258,21 @@ font-family: 'Quicksand', sans-serif;
     position:relative;
     top:-200px;
 }
+
+.preloader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.16);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  transition: opacity 0.3s linear;
+}
+
 .anchor, a
 {
     background: rgb(250, 249, 249);
